--- a/4doorcars.html
+++ b/4doorcars.html
@@ -45,7 +45,7 @@
 		<!--slider------------------->
 		<ul id="autoWidth" class="cs-hidden">
 		<!--1------------------------------>
- <a href="Contact.html"> <li class="item-a">
+ <a href="GLC63.html"> <li class="item-a">
 	  
 	<!--slider-box-->
 		<div class="box">
@@ -63,7 +63,7 @@
 		</div>
 		</li> </a>
 		<!--2------------------------------>
-	<a href="Contact.html"> <li class="item-a">
+	<a href="E63.html"> <li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -80,7 +80,7 @@
 		</div>
 		</li> </a>
 		<!--3------------------------------>
-	<a href="Contact.html"> <li class="item-a">
+	<a href="RS7.html"> <li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -97,7 +97,7 @@
 		</div>
 		</li> </a>
 		<!--4------------------------------>
-	<a href="Contact.html">  <li class="item-a">
+	<a href="Q7.html">  <li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -114,7 +114,7 @@
 		</div>
 		</li> </a>
 		<!--5------------------------------>
-	<a href="Contact.html">  <li class="item-a">
+	<a href="X5.html">  <li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -131,7 +131,7 @@
 		</div>
 		</li> </a>
 		<!--6------------------------------>
-	<a href="Contact.html">  <li class="item-a">
+	<a href="520D.html">  <li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
