--- a/E63.html
+++ b/E63.html
@@ -4,23 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style3.css"/>
 <title>CAPSTONE</title>
-
-<style>
-	header {z-index: 10;}
-	div.s1 {position: absolute; top: 0px; background-color:white; Margin-top:0%; Width:100%;}
-	body {background-image:url("bgimg.png");  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;}
-	.walk {margin-top:35%; margin-left:32%; text-align:center; width:41%;
-			height:%; background-color: transparent; color: rgba(0, 178, 255, 1);}
-			
-	.clearfix ::after {content:""; display:table; clear:both;}
-	
-	nav li {display:inline-block; margin-left:30px; margin-right:85px; padding-top:25px;
-			position:relative;}
-	nav a::before {content:""; display:block; height:5px; width:100%; background-color: rgba(0, 178, 255, 1); position:absolute; top: 0;}
-	</style>
 </head>
 <body>
 
@@ -30,6 +15,7 @@
 			<h3 style="float:left; padding:0%; position: center-align;">CAPSTONE <br> <i style="color: rgba(0, 178, 255, 1);">"Top of the Line"</i></h3>
 			<nav>
 				<ul style="margin:0; padding:0; list-style:none; float:right; color: rgba(0, 178, 255, 1);">
+					<li><a href="index.html">Home</a></li>
 					<li><a href="4doorcars.html">Vehicles (4-doors)</a></li>
 					<li><a href="coupes.html">Coupes (2-doors)</a></li>
 					<li><a href="FAQ.html">Frequently Asked Questions</a></li>
@@ -38,12 +24,21 @@
 			</nav>
 	</div>
 </header>
-<div class="walk" style='background-color:rgba(15, 15, 15, 1);'>
-	<h1 style='color:white;'>Welcome to <b style='color: rgba(0, 178, 255, 1);'>CAPSTONE</b><br> We aim to take you to the <i style="color: rgba(0, 178, 255, 1);">Top of the Line!</i></h1>
-	
+<div class="walk1">
+	<img src="img/amge63.jpg" style='width:100%; height:100%;'>
+	<h3>Mercedes AMG E63</h3>
+	<hr style='width:60%;'>
+	<div class="walk" stye='background-color:rgba(15, 15, 15, 1);'>
+		<p style='color: black;'>The E63 S' engine is breathtaking: wonderfully noisy,
+			 violent and more authentic-sounding than so many modern 'piped-in' V8s. Using twin-scroll turbochargers to produce its 604bhp,
+			 it runs in an even more fierce specification here than in Mercedes-AMG's range-topping GT R two-seater sports car</p>
+		
+	</div>
 </div>
 
 <div style="column-count: 3;">
+
+
 	
 </div>
 			
