--- a/FAQ.html
+++ b/FAQ.html
@@ -14,8 +14,8 @@
 
 	body {background-color: rgba(0, 178, 255, 1);}
 
-	.walk {margin-top:1%; margin-lft:auto; float:right; text-align:center; width:25%;
-			height:%; background-color: transparent; color: rgba(0, 178, 255, 1);}
+	.walk {margin-top:1%; float:right; text-align:center; width:25%;
+			background-color: transparent; color: rgba(0, 178, 255, 1);}
 	
 	.walk1 {margin-top:1%; margin-lft:auto; float:left; text-align:center; width:25%;
 			height:%; background-color: transparent; color: rgba(0, 178, 255, 1);}
