--- a/Q7.html
+++ b/Q7.html
@@ -4,22 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style3.css"/>
 <title>CAPSTONE</title>
 
 <style>
-	header {z-index: 10;}
-	div.s1 {position: absolute; top: 0px; background-color:white; Margin-top:0%; Width:100%;}
-	body {background-image:url("bgimg.png");  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;}
-	.walk {margin-top:35%; margin-left:32%; text-align:center; width:41%;
-			height:%; background-color: transparent; color: rgba(0, 178, 255, 1);}
-			
-	.clearfix ::after {content:""; display:table; clear:both;}
-	
-	nav li {display:inline-block; margin-left:30px; margin-right:85px; padding-top:25px;
-			position:relative;}
-	nav a::before {content:""; display:block; height:5px; width:100%; background-color: rgba(0, 178, 255, 1); position:absolute; top: 0;}
 	</style>
 </head>
 <body>
@@ -30,6 +18,7 @@
 			<h3 style="float:left; padding:0%; position: center-align;">CAPSTONE <br> <i style="color: rgba(0, 178, 255, 1);">"Top of the Line"</i></h3>
 			<nav>
 				<ul style="margin:0; padding:0; list-style:none; float:right; color: rgba(0, 178, 255, 1);">
+					<li><a href="index.html">Home</a></li>
 					<li><a href="4doorcars.html">Vehicles (4-doors)</a></li>
 					<li><a href="coupes.html">Coupes (2-doors)</a></li>
 					<li><a href="FAQ.html">Frequently Asked Questions</a></li>
@@ -38,12 +27,24 @@
 			</nav>
 	</div>
 </header>
-<div class="walk" style='background-color:rgba(15, 15, 15, 1);'>
-	<h1 style='color:white;'>Welcome to <b style='color: rgba(0, 178, 255, 1);'>CAPSTONE</b><br> We aim to take you to the <i style="color: rgba(0, 178, 255, 1);">Top of the Line!</i></h1>
-	
+<div class="walk1">
+	<div>
+		<img src="img/aQ7.jpg" style='width:100%; height:100%; boder: 4px solid black;';>
+	</div>
+	<h3>Audi Q7</h3>
+	<hr style='width:60%;'>
+	<div class="walk" stye='background-color:rgba(15, 15, 15, 1);'>
+		<p style='color: black;'>Matrix LED headlights are activated, deactivated or dimmed individually according to the situation, while dynamic indicators use a fluid sweeping motion.			19" x 8.5J '5-V-spoke' design aluminium alloy wheels 
+			A high-definition, touch screen colour display complimented by the full-colour, fully digital Audi Virtual Cockpit. 
+			Outside, the flowing lines of the bodywork give it an imposing, yet sleek appearance. 			
+			Electronically regulated suspension system which offers maximum ride comfort. Suspension adjusts to different driving situations.  </p>
+		
+	</div>
 </div>
 
 <div style="column-count: 3;">
+
+
 	
 </div>
 			
