--- a/MTT.html
+++ b/MTT.html
@@ -31,11 +31,15 @@
 <body>
 
 <header class="clearfix">
-	<div class="s1" style="width:100%; font-size-adjust:100%;">
-		<img style="float: left;" src="logo.png" alt="Capstone LOGO" width="10%" height="5%" a href="index.html">
-			<h3 style="float:left; padding:0%; position: center-align;">CAPSTONE <br> <i style="color: rgba(0, 178, 255, 1);">"Top of the Line"</i></h3>
-			<nav>
-				<ul style="margin:0; padding:0; list-style:none; float:right; color: rgba(0, 178, 255, 1);">
+    <div class="s1" style="width:100%; font-size-adjust:100%;">
+		<img style="float: left;" src="logo.png" alt="Capstone LOGO" width="8%" a href="index.html">
+			<h3 style="float:left; padding-top:0.8%;"> 
+				<i style="color: rgba(0, 178, 255, 1);">
+					"Top of the Line"
+				</i>
+			</h3>
+		<nav>
+			<ul style="margin:0; list-style:none; float:right; color: rgba(0, 178, 255, 1);">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="4doorcars.html">Vehicles (4-doors)</a></li>
 					<li><a href="coupes.html">Coupes (2-doors)</a></li>
@@ -77,10 +81,10 @@
     <a href="aricv.html"> 
         <div class="Employee3">
             <div>
-                <img src="img/Aripro.JPG" style='width:auto; height:100%; position:absolute; left: 0%;'>
+                <img src="img/JodainPro.jpg" style='width:auto; height:100%; position:absolute; left: 0%;'>
             </div>
             <div style="position:absolute; right:5%;">
-                <h2>Lead Developer</h2>
+                <h2>Head of IT & Lead Developer</h2>
                 <p><strong>Jodain Lafeuillee</strong><br> <br>
                     jodain1998@gmail.com
                 </p>
@@ -91,12 +95,12 @@
         <a href="aricv.html"> 
             <div class="Employee4">
                 <div>
-                    <img src="img/Aripro.JPG" style='width:auto; height:100%; position:absolute; left: 0%;'>
+                    <img src="img/oscarpro.jpg" style='width:auto; height:100%; position:absolute; left: 0%;'>
                 </div>
                 <div style="position:absolute; right:5%;">
-                    <h2>Lead Developer</h2>
-                    <p><strong>Jodain Lafeuillee</strong><br> <br>
-                        jodain1998@gmail.com
+                    <h2>Marketing Manager</h2>
+                    <p><strong>Oscar Muñoz</strong><br> <br>
+                        oscar@gmail.com
                     </p>
                 </div>
             </div>
