--- a/GLC63.html
+++ b/GLC63.html
@@ -11,14 +11,19 @@
 
 <header class="clearfix">
 	<div class="s1" style="width:100%; font-size-adjust:100%;">
-		<img style="float: left;" src="logo.png" alt="Capstone LOGO" width="10%" height="5%" a href="index.html">
-			<h3 style="float:left; padding:0%; position: center-align;">CAPSTONE <br> <i style="color: rgba(0, 178, 255, 1);">"Top of the Line"</i></h3>
-			<nav>
-				<ul style="margin:0; padding:0; list-style:none; float:right; color: rgba(0, 178, 255, 1);">
+		<img style="float: left;" src="logo.png" alt="Capstone LOGO" width="8%" a href="index.html">
+			<h3 style="float:left; padding-top:0.8%;"> 
+				<i style="color: rgba(0, 178, 255, 1);">
+					"Top of the Line"
+				</i>
+			</h3>
+		<nav>
+			<ul style="margin:0; list-style:none; float:right; color: rgba(0, 178, 255, 1);">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="4doorcars.html">Vehicles (4-doors)</a></li>
 					<li><a href="coupes.html">Coupes (2-doors)</a></li>
 					<li><a href="FAQ.html">Frequently Asked Questions</a></li>
+					<li><a href="MTT.html">Meet The Team</a></li>
 					<li><a href="Contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
