--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 	body {background-image:url("bgimg.png");  background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;}
-	.walk {margin-top:35%; margin-left:32%; text-align:center; width:41%;
+	
+ 
+
+  .walk {margin-top:35%; margin-left:32%; text-align:center; width:41%;
 			height:%; background-color: transparent; color: rgba(0, 178, 255, 1);}
 			
-	.clearfix ::after {content:""; display:table; clear:both;}
+
+
+
+
+			.clearfix ::after {content:""; display:table; clear:both;}
 	
 	nav li {display:inline-block; margin-left:30px; margin-right:85px; padding-top:25px;
 			position:relative;}
@@ -26,22 +33,35 @@
 
 <header class="clearfix">
 	<div class="s1" style="width:100%; font-size-adjust:100%;">
-		<img style="float: left;" src="logo.png" alt="Capstone LOGO" width="10%" height="5%" a href="index.html">
-			<h3 style="float:left; padding:0%; position: center-align;">CAPSTONE <br> <i style="color: rgba(0, 178, 255, 1);">"Top of the Line"</i></h3>
-			<nav>
-				<ul style="margin:0; padding:0; list-style:none; float:right; color: rgba(0, 178, 255, 1);">
-					<li><a href="4doorcars.html">Vehicles (4-doors)</a></li>
-					<li><a href="coupes.html">Coupes (2-doors)</a></li>
-					<li><a href="FAQ.html">Frequently Asked Questions</a></li>
-					<li><a href="Contact.html">Contact Us</a></li>
-				</ul>
-			</nav>
+		<img style="float: left;" src="logo.png" alt="Capstone LOGO" width="8%" a href="index.html">
+			<h3 style="float:left; padding-top:0.8%;"> 
+				<i style="color: rgba(0, 178, 255, 1);">
+					"Top of the Line"
+				</i>
+			</h3>
+		<nav>
+			<ul style="margin:0; list-style:none; float:right; color: rgba(0, 178, 255, 1);">
+				<li><a href="4doorcars.html">Vehicles (4-doors)</a></li>
+				<li><a href="coupes.html">Coupes (2-doors)</a></li>
+				<li><a href="FAQ.html">Frequently Asked Questions</a></li>
+				<li><a href="MTT.html">Meet The Team</a></li>
+				<li><a href="Contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
 	</div>
 </header>
+
+
+
 <div class="walk" style='background-color:rgba(15, 15, 15, 1);'>
-	<h1 style='color:white;'>Welcome to <b style='color: rgba(0, 178, 255, 1);'>CAPSTONE</b><br> We aim to take you to the <i style="color: rgba(0, 178, 255, 1);">Top of the Line!</i></h1>
+	<h1 style='color:white;'>Welcome to <b style='color: rgba(0, 178, 255, 1);'>CAPSTONE</b> <br> 
+		We aim to take you to the <i style="color: rgba(0, 178, 255, 1);">Top of the Line!</i></h1>
 	
 </div>
+
+
+
+
 
 <div style="column-count: 3;">
 	
