--- a/coupes.html
+++ b/coupes.html
@@ -39,17 +39,21 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="4doorcars.html">Vehicles (4-doors)</a></li>
 					<li><a href="FAQ.html">Frequently Asked Questions</a></li>
-					<li><a href="MTT.html">Meet The Team</a></li>>
+					<li><a href="MTT.html">Meet The Team</a></li>
 					<li><a href="Contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
 	</div>
 </header>
+
+
 <div class="container">
 		<!--slider------------------->
 		<ul id="autoWidth" class="cs-hidden">
 		<!--1------------------------------>
-  <li class="item-a">
+ 
+	<a href="AMGGT.html">
+		<li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -62,11 +66,11 @@
 		<!--character-details-->
 		<p>Mercedes AMG-GT</p>
 		</div>
-		
 		</div>
 		</li>
+	</a>
 		<!--2------------------------------>
-  <li class="item-a">
+		<a href="E53.html"> <li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -81,9 +85,9 @@
 		</div>
 		
 		</div>
-		</li>
+		</li> </a>
 		<!--3------------------------------>
-  <li class="item-a">
+		<a href="TT.html"><li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -98,9 +102,9 @@
 		</div>
 		
 		</div>
-		</li>
+		</li></a>
 		<!--4------------------------------>
-  <li class="item-a">
+		<a href="R8.html"><li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -115,9 +119,9 @@
 		</div>
 		
 		</div>
-		</li>
+		</li></a>
 		<!--5------------------------------>
-  <li class="item-a">
+		<a href="M2.html"><li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -132,9 +136,9 @@
 		</div>
 		
 		</div>
-		</li>
+		</li></a>
 		<!--6------------------------------>
-  <li class="item-a">
+		<a href="8Sc.html"> <li class="item-a">
 	  <!--slider-box-->
 		<div class="box">
 		<p class="FR">CAPSTONE</p>
@@ -149,7 +153,7 @@
 		</div>
 		
 		</div>
-		</li>
+		</li></a>
 		</ul>
 			
 			
