--- a/AdamCV.html
+++ b/AdamCV.html
@@ -3,7 +3,7 @@
     <body>
         <h1> Adam Cream - Solutions Architect </h1>
 
-        <img src="Adam.png" alt=IN4.0 Sample picture width="200" height="100"
+        <img src="img/Adam.png" alt=IN4.0 Sample picture width="200" height="100"
 
 
            <br> </p><b>PROFILE</b></br>
