--- a/X5.html
+++ b/X5.html
@@ -33,7 +33,7 @@
 	<img src="img/X5.jpg" style='width:100%; height:100%;'>
 	<h3>BMW X5</h3>
 	<hr style='width:60%;'>
-	<div class="walk" stye='background-color:rgba(15, 15, 15, 1);'>
+	<div class="walk";>
 		<p style='color: black;'>Forget what you know about sports activity vehicles,<br> 
             the BMW X5 Sports Activity Vehicle (SAV) has been redesigned and rebuilt from the wheels up <br>
             and has new levels of luxury, connectivity and performance. Whatever adventures lie ahead, know you can. </p>
