--- a/4doorcars.html
+++ b/4doorcars.html
@@ -10,7 +10,7 @@
 	<!--Javascript-->
 	<script type="text/javascript" src="js/JQuery3.3.1.js"></script>
 	<script type="text/javascript" src="js/lightslider.js"></script>
-	<title>Future Rentals</title>
+	<title>CAPSTONE</title>
 
 <style>
 	header {z-index: 10;}
