--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Future Rentals</title>
+<title>Capstone</title>
 
 <script type="text/javascript">
         window.onload = function() 
@@ -20,8 +20,10 @@
 	header {z-index: 10;}
 	div.s1 {position: absolute; top: 0px; background-color:white; Margin-top:0%; Width:100%;}
 	body {background-color: rgba(0, 178, 255, 1);}
-	.walk {margin-top:11%; margin-left:auto; Margin-right:Auto; text-align:center; width:50%;
-		 background-color: white; color: rgba(0, 178, 255, 1); padding-top:1px; padding-botto:50px;}
+	.walk {margin-top:11%; text-align:center; width:50%;
+		 background-color: white; color: rgba(0, 178, 255, 1); padding-top:1px; padding-botto:50px;
+			position: absolute; right:30%; left: 25%;
+			border-radius: 1%; box-shadow: 8px 12px 10px 12px rgba(0,0,0,0.5);}
 			
 	.clearfix ::after {content:""; display:table; clear:both;}
 	
@@ -33,7 +35,7 @@
 <body>
 	<header class="clearfix">
 		<div class="s1" style="width:100%; font-size-adjust:100%;">
-			<img style="float: left;" src="logo.png" alt="Capstone LOGO" width="8%" a href="index.html">
+			<img style="float: left;" src="logo.png" alt="Capstone LOGO" width="8%">
 				<h3 style="float:left; padding-top:0.8%;"> 
 					<i style="color: rgba(0, 178, 255, 1);">
 						"Top of the Line"
@@ -51,22 +53,56 @@
 	</div>
 </header>
 <div class="walk">
-<form style="padding:25%;">
-	<h2 style="color:black;"><i>Contact Us</i></h2>
-        <p input type="hidden" name="contact_number"><p>
-        <label>Name</label>
-        <input type="text" name="user_name">
-        <label>Email</label>
-        <input type="email" name="user_email">
-		<label>Phone</label>
-		<input type="text" name="phone_number">
-		<br>
-		<br>
-        <label>Message</label>
-        <textarea name="message"></textarea>
-		<br>
-        <input type="submit" value="Send">
-    </form>
+	<div style="position:absolute; right:0.5%; text-align: left;">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d318524.2882557873!2d-0.692152!3d51.412774!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x
+		0%3A0x6ebcb774b970f506!2sCapstone%20Ltd!5e0!3m2!1sen!2sus!4v1622773341849!5m2!1sen!2sus" 
+		width="300" height="300" style="border:1;"  loading="lazy"></iframe>
+
+		<p style="color: black;">
+			1 Cherington Way<br> 
+			Ascot SL5 8TJ<br>
+			United Kingdom<br>
+			020 7123 4562
+		</p>
+	</div>
+	
+	<div style="position:absolute; left:2.5%; text-align: left;">
+		
+		<h2 style="color: black;">
+			<b>Capstone Rentals Limited</b><br> 
+			<i>"Taking you to the top"</i><br><br>
+			United Kingdom,<br>
+			Get your Rental Today!</b>
+		</h2>
+	</div>
+
+	<hr style="margin-top: 60%;">
+	<div>
+		<img style="position: inherit; margin-top:1%;" src="logo.png" alt="Capstone LOGO" width="70%">
+	</div>
+		
+	
+	
+	
+	
+	<div style="position:static; background-color:lightgrey;">	
+		<form style="padding:%;">
+			<h1 style="color:black;text-align: center;">Contact Us</h1>
+			<p input type="hidden" name="contact_number"><p>
+			<label>Name</label>
+			<input type="text" name="user_name"><br>
+			<label>Email</label>
+			<input type="email" name="user_email"><br>
+			<label>Phone</label>
+			<input type="text" name="phone_number">
+			<br>
+			<br>
+			<label>Message</label>
+			<textarea name="message" style="overflow-y: scroll;"></textarea>
+			<br>
+			<input type="submit" value="Send">
+		</form>
+	</div>
 </div>
 
 <div style="column-count: 3;">
