--- a/coupes.html
+++ b/coupes.html
@@ -10,7 +10,7 @@
 	<!--Javascript-->
 	<script type="text/javascript" src="js/JQuery3.3.1.js"></script>
 	<script type="text/javascript" src="js/lightslider.js"></script>
-	<title>Future Rentals</title>
+	<title>CAPSTONE</title>
 
 <style>
 	div.s1 {position: absolute; top: 0px; background-color:white; Margin-top:0%; Width:100%;}
