--- a/MTT.html
+++ b/MTT.html
@@ -92,7 +92,7 @@
         </div>
         </a>
 
-        <a href="aricv.html"> 
+        <a href="oscarcv.html"> 
             <div class="Employee4">
                 <div>
                     <img src="img/oscarpro.jpg" style='width:auto; height:100%; position:absolute; left: 0%;'>
